--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon"
+    "start": "ts-node ./src/index.ts",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
