--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.15",
-    "@yoskutik/react-vvm": "^1.1.3",
-    "mobx": "^6.7.0",
-    "mobx-react": "^7.6.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "reactflow": "^11.3.0",
-    "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.7.0"
+    "reactflow": "^11.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
