--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.17"
+    "@types/node": "^18.11.17",
+    "prettier": "^2.8.2"
   },
   "dependencies": {
     "@fastify/autoload": "^5.6.0",
