--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/node": "^18.11.17",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@fastify/autoload": "^5.6.0",
