--- a/package.json
+++ b/package.json
@@ -10,28 +10,24 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\""
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.15",
-    "@reduxjs/toolkit": "^1.9.1",
-    "jsoneditor": "^9.9.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3",
-    "reactflow": "^11.3.0"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.1",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
-    "@types/jsoneditor": "^9.9.0",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
-    "prettier": "^2.8.2",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
