--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.5.1",
     "fastify": "^4.10.2",
     "fastify-plugin": "^4.4.0",
+    "file-type": "^18.2.1",
     "fluent-json-schema": "^4.0.0",
     "mysql2": "^2.3.3",
     "pino-pretty": "^9.1.1",
