--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "type": "commonjs",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
-    "dev": "nodemon",
+    "start": "NODE_ENV=\"produnction\" ts-node ./src/index.ts",
+    "dev": "NODE_ENV=\"development\" nodemon",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --ignore-path .gitignore --write \"src/**/*.+(ts|json)\"",
     "prepare": "husky install",
