--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "type": "commonjs",
   "scripts": {
-    "start": "NODE_ENV=\"produnction\" ts-node ./src/index.ts",
-    "dev": "NODE_ENV=\"development\" nodemon",
+    "start": "cross-env NODE_ENV=produnction ts-node ./src/index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --ignore-path .gitignore --write \"src/**/*.+(ts|json)\"",
     "prepare": "husky install",
@@ -27,6 +27,7 @@
     "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
