--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "dnd-core": "^16.0.1",
+    "immutability-helper": "^3.1.1",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
