--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
+    "reactflow": "^11.6.1",
     "zustand": "^4.3.3"
   },
   "devDependencies": {
