--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "dnd-core": "^16.0.1",
+    "hoist-non-react-statics": "^3.3.2",
     "immutability-helper": "^3.1.1",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
